[gd_scene load_steps=20 format=3 uid="uid://cxga7wckey7c1"]

[ext_resource type="Script" uid="uid://bjvvt3d7tfj5d" path="res://addons/script_multi_plus/smp_scripts/smp_dock/smp_dock_main_misc/smp_dock_item_bar.gd" id="1_12w1p"]
[ext_resource type="PackedScene" uid="uid://dbf2pr2mmwdcn" path="res://addons/script_multi_plus/smp_scenes/smp_misc/default_button.tscn" id="2_2rhrc"]
[ext_resource type="Script" uid="uid://cta3g1dfmcua" path="res://addons/script_multi_plus/smp_scripts/smp_dock/smp_item_bar_misc/smp_header_panel.gd" id="2_r52ke"]
[ext_resource type="Texture2D" uid="uid://duf640vrki1y1" path="res://addons/script_multi_plus/sme_images/godot_Stretch.svg" id="3_r52ke"]
[ext_resource type="Texture2D" uid="uid://8tgnqohcerxb" path="res://addons/script_multi_plus/sme_images/godot_Panels2.svg" id="4_2lerm"]
[ext_resource type="Script" uid="uid://bnrma76qx6cqv" path="res://addons/script_multi_plus/smp_scripts/smp_dock/smp_item_bar_misc/smp_item_expand_button.gd" id="5_qjk5q"]
[ext_resource type="PackedScene" uid="uid://eq0c4mnj1gg0" path="res://addons/script_multi_plus/smp_scenes/smp_item/item_bar_menu_button.tscn" id="6_3cem3"]
[ext_resource type="Script" uid="uid://lkecl0ldt38e" path="res://addons/script_multi_plus/smp_scripts/smp_dock/smp_item_bar_misc/smp_item_vert_button.gd" id="6_ievgl"]
[ext_resource type="Texture2D" uid="uid://bunlm3s6as33f" path="res://addons/script_multi_plus/sme_images/godot_CodeHighlighter.svg" id="6_vrv55"]
[ext_resource type="Script" uid="uid://fv5iv1swmgor" path="res://addons/script_multi_plus/smp_scripts/smp_dock/smp_item_bar_misc/smp_item_minimap_button.gd" id="7_2rhrc"]
[ext_resource type="Texture2D" uid="uid://ch2atgjb04ij5" path="res://addons/script_multi_plus/sme_images/godot_Save.svg" id="7_3cem3"]
[ext_resource type="PackedScene" uid="uid://btoyad3ly4ekp" path="res://addons/script_multi_plus/smp_scenes/smp_item/item_rich_name.tscn" id="7_t7li8"]
[ext_resource type="Script" uid="uid://bj6dokg8ooq4g" path="res://addons/script_multi_plus/smp_scripts/smp_dock/smp_item_bar_misc/smp_item_diraccess.gd" id="8_l30lj"]
[ext_resource type="Script" uid="uid://d221jsval315m" path="res://addons/script_multi_plus/smp_scripts/smp_dock/smp_item_bar_misc/smp_item_rich_name.gd" id="8_vrv55"]
[ext_resource type="Script" uid="uid://cw77c2abi4jns" path="res://addons/script_multi_plus/smp_scripts/smp_dock/smp_item_bar_misc/smp_item_boundary_button.gd" id="9_vrv55"]
[ext_resource type="Script" uid="uid://tdbed3bytc4v" path="res://addons/script_multi_plus/smp_scripts/smp_dock/smp_item_bar_misc/smp_item_add_button.gd" id="14_hs321"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m17hu"]
bg_color = Color(0.105882, 0.105882, 0.109804, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
border_blend = true

[sub_resource type="Gradient" id="Gradient_3cem3"]
interpolation_mode = 1
colors = PackedColorArray(0.678117, 0.588109, 0.122553, 0.5, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_l30lj"]
gradient = SubResource("Gradient_3cem3")
width = 32

[node name="DockItemBar" type="MarginContainer"]
custom_minimum_size = Vector2(0, 5)
offset_right = 217.0
offset_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1_12w1p")

[node name="ItemHeaderPanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m17hu")
script = ExtResource("2_r52ke")

[node name="ItemBarHBox" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="ItemExpandButton" parent="ItemBarHBox" instance=ExtResource("2_2rhrc")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("3_r52ke")
script = ExtResource("5_qjk5q")

[node name="ItemRecentMenu" parent="ItemBarHBox" instance=ExtResource("6_3cem3")]
unique_name_in_owner = true
layout_mode = 2

[node name="ItemDirAccess" parent="ItemBarHBox" instance=ExtResource("2_2rhrc")]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
action_mode = 0
button_mask = 3
icon = ExtResource("7_3cem3")
script = ExtResource("8_l30lj")

[node name="TextureProgressBar" type="TextureProgressBar" parent="ItemBarHBox/ItemDirAccess"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.2
step = 0.0
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_l30lj")

[node name="ItemVerticalButton" parent="ItemBarHBox" instance=ExtResource("2_2rhrc")]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 24)
layout_mode = 2
icon = ExtResource("4_2lerm")
script = ExtResource("6_ievgl")

[node name="ItemRichName" parent="ItemBarHBox" instance=ExtResource("7_t7li8")]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("8_vrv55")

[node name="ItemBoundaryButton" parent="ItemBarHBox" instance=ExtResource("2_2rhrc")]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 24)
layout_mode = 2
script = ExtResource("9_vrv55")

[node name="ItemMinimapButton" parent="ItemBarHBox" instance=ExtResource("2_2rhrc")]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 24)
layout_mode = 2
icon = ExtResource("6_vrv55")
script = ExtResource("7_2rhrc")

[node name="ItemAddButton" parent="ItemBarHBox" instance=ExtResource("2_2rhrc")]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("14_hs321")
